@@ -1,0 +1,3 @@
+Site URL: https://www.mrskin.com/
+Contact: https://www.mrskin.com/help/contact
+DMCA: customer-service@skintertainment.com
